use month labels for boxplot tick lables

--- a/my_notebook.ipynb
+++ b/my_notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "id": "70244452-1398-4a37-8a4d-9b4f169e205b",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "id": "88a39a19-28ee-46fb-8784-2dae62758547",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "id": "47c2bad5-c091-4dd1-baa9-9a20e975939a",
    "metadata": {},
    "outputs": [
@@ -41,6 +41,7 @@
    ],
    "source": [
     "month_nums = range(1,13) # 1 to 12, inclusive\n",
+    "\n",
     "month_names = [month_name[mm] + f' ({mm})'  for mm in month_nums]\n",
     "\n",
     "#create a list of 1D arrays, 1 for each month\n",
@@ -54,6 +55,7 @@
     "fig, ax = plt.subplots(1,1)\n",
     "__ = ax.boxplot(tmax_by_month, vert=False)\n",
     "# HINT add the keyword argument labels=month_names (Python < 3.9) or tick_labels=month_names (Python >= 3.9)\n",
+    "tick_labels=month_names\n",
     "__ = ax.set_xlabel(r'Temperature ($^\\circ$C)')\n",
     "__ = ax.set_ylabel('Month')\n",
     "__ = ax.set_title(f'Ross-on-Wye maximum temperatures, {int(np.min(year))} to {int(np.max(year))}')\n"
