--- a/my_notebook.ipynb
+++ b/my_notebook.ipynb
@@ -57,7 +57,7 @@
     "# HINT add the keyword argument labels=month_names (Python < 3.9) or tick_labels=month_names (Python >= 3.9)\n",
     "tick_labels=month_names\n",
     "__ = ax.set_xlabel(r'Temperature ($^\\circ$C)')\n",
-    "__ = ax.set_ylabel('Month')\n",
+    "__ = ax.set_ylabel('Months of the Year')\n",
     "__ = ax.set_title(f'Ross-on-Wye maximum temperatures, {int(np.min(year))} to {int(np.max(year))}')\n"
    ]
   },
